--- a/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserEvaluteCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserEvaluteCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F18b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -18,7 +18,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SWS-n7-nQY">
                         <rect key="frame" x="8" y="8" width="50" height="34"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GoodEvalute" translatesAutoresizingMaskIntoConstraints="NO" id="sZJ-Xe-CjL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="502B6DFE-9578-474D-A970-3A2430177196" translatesAutoresizingMaskIntoConstraints="NO" id="sZJ-Xe-CjL">
                                 <rect key="frame" x="13" y="0.0" width="25" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="mLZ-D8-pep"/>
@@ -47,14 +47,11 @@
                             <constraint firstItem="sZJ-Xe-CjL" firstAttribute="top" secondItem="SWS-n7-nQY" secondAttribute="top" id="iav-rr-TVN"/>
                             <constraint firstItem="Zh3-AP-b1a" firstAttribute="width" secondItem="SWS-n7-nQY" secondAttribute="width" id="l53-lA-qHJ"/>
                         </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="nA2-JG-QI8" appends="YES" id="4jR-66-rCv"/>
-                        </connections>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ebN-1l-EVk">
                         <rect key="frame" x="262" y="8" width="50" height="34"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BadEvalute" translatesAutoresizingMaskIntoConstraints="NO" id="fjR-Tb-ZBa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6444BED9-456D-4DC4-9EC4-2025259B65BF" translatesAutoresizingMaskIntoConstraints="NO" id="fjR-Tb-ZBa">
                                 <rect key="frame" x="13" y="0.0" width="25" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="QOt-1p-PpK"/>
@@ -83,9 +80,6 @@
                             <constraint firstItem="2hp-jQ-xwR" firstAttribute="leading" secondItem="ebN-1l-EVk" secondAttribute="leadingMargin" id="Yfh-L6-nOR"/>
                             <constraint firstItem="2hp-jQ-xwR" firstAttribute="top" secondItem="fjR-Tb-ZBa" secondAttribute="bottom" constant="1" id="rIR-jg-tWR"/>
                         </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="Chp-Sj-Cie" appends="YES" id="7t9-cN-ZzS"/>
-                        </connections>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9OO-yt-8JY">
                         <rect key="frame" x="66" y="18" width="188" height="13.5"/>
@@ -131,19 +125,179 @@
             </connections>
             <point key="canvasLocation" x="278" y="380"/>
         </tableViewCell>
-        <tapGestureRecognizer id="nA2-JG-QI8">
-            <connections>
-                <action selector="good:" destination="KGk-i7-Jjw" id="Ofe-Eh-Ehz"/>
-            </connections>
-        </tapGestureRecognizer>
-        <tapGestureRecognizer id="Chp-Sj-Cie">
-            <connections>
-                <action selector="oohNO:" destination="KGk-i7-Jjw" id="wzS-GZ-ih0"/>
-            </connections>
-        </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="BadEvalute" width="25" height="21"/>
-        <image name="GoodEvalute" width="25" height="21"/>
+        <image name="502B6DFE-9578-474D-A970-3A2430177196" width="25" height="21">
+            <mutableData key="keyedArchiveRepresentation">
+YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
+GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
+c1dOU0NvbG9ygAKADRIgwAAAgAOAC1h7MjUsIDIxfdIVChYYWk5TLm9iamVjdHOhF4AEgArSFQoaHaIb
+HIAFgAaACRAA0iAKISJfEBROU1RJRkZSZXByZXNlbnRhdGlvboAHgAhPERDSTU0AKgAACDwAAAAAYUIZ
+ZeKaO+v3qEL/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/2qEL/4po762FDGWUAAAAAYEIZZPSmQPn3qUL/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//epQv/0pkD5YEIZZOKaO+v3qUL/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1pj//9aQ7//WmQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/96lC/9+YOuv3qUL/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/0ozv/+MaC//vcsf/1qUT/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/3qEH/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9KI5//nXpv//////+MaB//SjOv/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adB
+//OjNf/75MH///////nPlP/0ojj/9adB//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WmPf/5z47///76///69v/2tlr/9aQ9
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WkO//4v3D////////////84Lr/9KI1//SjPP/1pDv/9aZA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQf/1ozn/+9+2
+////////////+96z//a7YP/3vmr/97xk//WqRf/1pj//9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/0ozr/9KM6//WnQP/0ojf/9rVZ//769P///////////////////v//////
+///////86Mn/9apF//WmP//1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1qEL/+cuK
+//nLjP/1qEL/975t//3t1P///////////////////////////////////////fHk//WtSf/1pz//9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1pj3/9rRN///+////////9rdZ//3t0///////////
+//////////////////////////////////3r0//1qEL/9aZA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9aY8//a1TP//+/z///z8//a3W//97M3/////////////////////////////////////
+///////85cP/9ac///WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WkPP/2tEz///v8
+///8/P/2t1v//ezN////////////////////////////////////////////++G4//WjOf/1p0H/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1pDz/9rVM///7/P///Pz/9rdb//zszf//////////
+//////////////////////////////////nRlP/1pDv/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9aY8//a0TP///v////////a3Wv/97tP/////////////////////////////////////
+///7+f/1r0r/9aY9//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1qUT/+tKZ
+//nSmv/1qkT/+MJ4//rXpP/858j//fHg//758v//+vr//vr2//3x4v/50Jb/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//epQv/1p0D/9adA//WnQP/1p0D/9adA//WjOf/1ozn/9adA//SjOv/1ozf/9aY9
+//WrSP/1sE7/9rNM//WxTv/1q0j/9aQ6//WnQP/1p0D/9adA//WnQP/1p0D/9adA//eoQf/imjvr96lC
+//WnQP/1p0D/9adA//WnQP/1p0H/9adB//WnQP/1p0H/9adB//WnQP/1p0D/9aY+//WkPf/1pj7/9aZA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//epQv/hmDrrYEIZZPSmQPn3qUL/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//epQv/0pkD5YUIZZQAAAABgQxlm45s87PaoQv/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA
+//WnQP/1p0D/9adA//WnQP/1p0D/9adA//WnQP/1p0D/9adA//aoQv/imjzpYUMZZQAAAAAADgEAAAMA
+AAABABkAAAEBAAMAAAABABUAAAECAAMAAAAEAAAI6gEDAAMAAAABAAEAAAEGAAMAAAABAAIAAAERAAQA
+AAABAAAACAESAAMAAAABAAEAAAEVAAMAAAABAAQAAAEWAAMAAAABABUAAAEXAAQAAAABAAAINAEcAAMA
+AAABAAEAAAFSAAMAAAABAAEAAAFTAAMAAAAEAAAI8odzAAcAAAfYAAAI+gAAAAAACAAIAAgACAABAAEA
+AQABAAAH2GFwcGwCIAAAbW50clJHQiBYWVogB9kAAgAZAAsAGgALYWNzcEFQUEwAAAAAYXBwbAAAAAAA
+AAAAAAAAAAAAAAAAAPbWAAEAAAAA0y1hcHBsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAALZGVzYwAAAQgAAABvZHNjbQAAAXgAAAWcY3BydAAABxQAAAA4d3RwdAAAB0wA
+AAAUclhZWgAAB2AAAAAUZ1hZWgAAB3QAAAAUYlhZWgAAB4gAAAAUclRSQwAAB5wAAAAOY2hhZAAAB6wA
+AAAsYlRSQwAAB5wAAAAOZ1RSQwAAB5wAAAAOZGVzYwAAAAAAAAAUR2VuZXJpYyBSR0IgUHJvZmlsZQAA
+AAAAAAAAAAAAFEdlbmVyaWMgUkdCIFByb2ZpbGUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAG1sdWMAAAAAAAAAHwAAAAxza1NLAAAAKAAAAYRkYURLAAAALgAAAaxj
+YUVTAAAAJAAAAdp2aVZOAAAAJAAAAf5wdEJSAAAAJgAAAiJ1a1VBAAAAKgAAAkhmckZVAAAAKAAAAnJo
+dUhVAAAAKAAAApp6aFRXAAAAFgAAAsJuYk5PAAAAJgAAAthjc0NaAAAAIgAAAv5oZUlMAAAAHgAAAyBp
+dElUAAAAKAAAAz5yb1JPAAAAJAAAA2ZkZURFAAAALAAAA4prb0tSAAAAFgAAA7ZzdlNFAAAAJgAAAth6
+aENOAAAAFgAAA8xqYUpQAAAAGgAAA+JlbEdSAAAAIgAAA/xwdFBPAAAAJgAABB5ubE5MAAAAKAAABERl
+c0VTAAAAJgAABB50aFRIAAAAJAAABGx0clRSAAAAIgAABJBmaUZJAAAAKAAABLJockhSAAAAKAAABNpw
+bFBMAAAALAAABQJydVJVAAAAIgAABS5hckVHAAAAJgAABVBlblVTAAAAJgAABXYAVgFhAGUAbwBiAGUA
+YwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBsAEcAZQBuAGUAcgBlAGwAIABSAEcAQgAtAGIAZQBzAGsA
+cgBpAHYAZQBsAHMAZQBQAGUAcgBmAGkAbAAgAFIARwBCACAAZwBlAG4A6AByAGkAYwBDHqUAdQAgAGgA
+7ABuAGgAIABSAEcAQgAgAEMAaAB1AG4AZwBQAGUAcgBmAGkAbAAgAFIARwBCACAARwBlAG4A6QByAGkA
+YwBvBBcEMAQzBDAEOwRMBD0EOAQ5ACAEPwRABD4ERAQwBDkEOwAgAFIARwBCAFAAcgBvAGYAaQBsACAA
+ZwDpAG4A6QByAGkAcQB1AGUAIABSAFYAQgDBAGwAdABhAGwA4QBuAG8AcwAgAFIARwBCACAAcAByAG8A
+ZgBpAGyQGnUoACAAUgBHAEIAIIJyX2ljz4/wAEcAZQBuAGUAcgBpAHMAawAgAFIARwBCAC0AcAByAG8A
+ZgBpAGwATwBiAGUAYwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBsBeQF6AXVBeQF2QXcACAAUgBHAEIA
+IAXbBdwF3AXZAFAAcgBvAGYAaQBsAG8AIABSAEcAQgAgAGcAZQBuAGUAcgBpAGMAbwBQAHIAbwBmAGkA
+bAAgAFIARwBCACAAZwBlAG4AZQByAGkAYwBBAGwAbABnAGUAbQBlAGkAbgBlAHMAIABSAEcAQgAtAFAA
+cgBvAGYAaQBsx3y8GAAgAFIARwBCACDVBLhc0wzHfGZukBoAIABSAEcAQgAgY8+P8GWHTvZOAIIsACAA
+UgBHAEIAIDDXMO0w1TChMKQw6wOTA7UDvQO5A7oDzAAgA8ADwQO/A8YDrwO7ACAAUgBHAEIAUABlAHIA
+ZgBpAGwAIABSAEcAQgAgAGcAZQBuAOkAcgBpAGMAbwBBAGwAZwBlAG0AZQBlAG4AIABSAEcAQgAtAHAA
+cgBvAGYAaQBlAGwOQg4bDiMORA4fDiUOTAAgAFIARwBCACAOFw4xDkgOJw5EDhsARwBlAG4AZQBsACAA
+UgBHAEIAIABQAHIAbwBmAGkAbABpAFkAbABlAGkAbgBlAG4AIABSAEcAQgAtAHAAcgBvAGYAaQBpAGwA
+aQBHAGUAbgBlAHIAaQENAGsAaQAgAFIARwBCACAAcAByAG8AZgBpAGwAVQBuAGkAdwBlAHIAcwBhAGwA
+bgB5ACAAcAByAG8AZgBpAGwAIABSAEcAQgQeBDEESQQ4BDkAIAQ/BEAEPgREBDgEOwRMACAAUgBHAEIG
+RQZEBkEAIAYqBjkGMQZKBkEAIABSAEcAQgAgBicGRAY5BicGRQBHAGUAbgBlAHIAaQBjACAAUgBHAEIA
+IABQAHIAbwBmAGkAbABldGV4dAAAAABDb3B5cmlnaHQgMjAwNyBBcHBsZSBJbmMuLCBhbGwgcmlnaHRz
+IHJlc2VydmVkLgBYWVogAAAAAAAA81IAAQAAAAEWz1hZWiAAAAAAAAB0TQAAPe4AAAPQWFlaIAAAAAAA
+AFp1AACscwAAFzRYWVogAAAAAAAAKBoAABWfAAC4NmN1cnYAAAAAAAAAAQHNAABzZjMyAAAAAAABDEIA
+AAXe///zJgAAB5IAAP2R///7ov///aMAAAPcAADAbNIlJicoWiRjbGFzc25hbWVYJGNsYXNzZXNfEBBO
+U0JpdG1hcEltYWdlUmVwoycpKlpOU0ltYWdlUmVwWE5TT2JqZWN00iUmLC1XTlNBcnJheaIsKtIlJi8w
+Xk5TTXV0YWJsZUFycmF5oy8sKtMyMwo0NTZXTlNXaGl0ZVxOU0NvbG9yU3BhY2VEMCAwABADgAzSJSY4
+OVdOU0NvbG9yojgq0iUmOzxXTlNJbWFnZaI7Kl8QD05TS2V5ZWRBcmNoaXZlctE/QFRyb290gAEACAAR
+ABoAIwAtADIANwBGAEwAVwBeAGUAcgB5AIEAgwCFAIoAjACOAJcAnACnAKkAqwCtALIAtQC3ALkAuwC9
+AMIA2QDbAN0RsxG4EcMRzBHfEeMR7hH3EfwSBBIHEgwSGxIfEiYSLhI7EkASQhJEEkkSURJUElkSYRJk
+EnYSeRJ+AAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAAEoA
+</mutableData>
+        </image>
+        <image name="6444BED9-456D-4DC4-9EC4-2025259B65BF" width="25" height="21">
+            <mutableData key="keyedArchiveRepresentation">
+YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
+GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
+c1dOU0NvbG9ygAKADRIgwAAAgAOAC1h7MjUsIDIxfdIVChYYWk5TLm9iamVjdHOhF4AEgArSFQoaHaIb
+HIAFgAaACRAA0iAKISJfEBROU1RJRkZSZXByZXNlbnRhdGlvboAHgAhPERDSTU0AKgAACDwAAAAABzcz
+ZRCDeesSj4X/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8Sj4X/EIJ56wc4NGUAAAAABzczZBKOg/kTkYX/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xORhv8SjoP5BzkzZBCDeesTkYb/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/E46E
+/xOOhP8TjoT/E46E/xOOhP8TjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/E5GG/xCCeOsSj4X/Eo6E
+/xKOhP8SjoT/Eo6E/xOOhP8Si4D/EoyA/xOOhP8TjYL/Eot//xOJfv8Uin//E4yA/xKMgv8SjID/FIp/
+/xOLgP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8Sj4X/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8TjoP/Naad
+/zmnnv8VjoT/K5iP/0Cqof9yvLb/kM3H/6vb1v+94uD/tN7c/5POyf9Ap53/E4yC/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8TjIL/MpuS//T49v/0+vn/Np+V/7zh3f//////////
+////////////////////////////5PPx/yOVi/8TjYP/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/E4yC/z+flv///Pv/+v7+/0Skm//H5+T/////////////////////////////////////
+//7+/v9XsKf/E4yA/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xOMgv8+n5X//Pv6
+//n9/P9Do5v/xeXi////////////////////////////////////////////rtzX/xSLgP8TjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8TjIL/Pp+V//z7+v/5/fz/Q6Ob/8Xl4v//////////
+/////////////////////////////////57Uz/8Vi4D/E46E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/E4yC/z+flv///v7//////0Skm//M6eb/////////////////////////////////////
+///////L6uf/GZKH/xOOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xONg/8flIr/rNjV
+/67Z1v8flov/gsfB/+/49v//////////////////////////////////////yefk/x2Qh/8SjYP/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo2D/xeMgv8XjYP/Eo2D/xSJfv9atK3//v7+
+/////////////////////////////////+bz8f8pl43/E42D/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8TjoT/E46E/xKOhP8TjoT/Fo2D/7/j3////////////8nl5P+Ozcf/lc/K
+/47Nx/8/pp3/E4yC/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/E46E/xOKf/9mvLb///////////+Tzcj/E4Z7/xWLf/8Uin7/EouA/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8TjYP/HpOJ
+/7Xe2///////4PLw/yWXjP8TjYP/E46E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKMgv8hkof/zenm//////9oubH/E4p+
+/xOOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8TjoT/Eol+/5TOyf//////esC6/xOKfv8TjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKPhf8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/E46E
+/xGJfv99xL7/3u7t/yuckv8TjYL/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKPhf8Qg3nrE5GG
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjYT/IJWL/yeWjP8UjYP/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xORhv8QgnjrBzc0ZBKOg/kSj4X/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKNg/8TjYP/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xORhv8SjoP5Bzg0ZQAAAAAHNzRmEIR77BKPhf8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E
+/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKOhP8SjoT/Eo6E/xKPhf8RhHnpBzg0ZQAAAAAADgEAAAMA
+AAABABkAAAEBAAMAAAABABUAAAECAAMAAAAEAAAI6gEDAAMAAAABAAEAAAEGAAMAAAABAAIAAAERAAQA
+AAABAAAACAESAAMAAAABAAEAAAEVAAMAAAABAAQAAAEWAAMAAAABABUAAAEXAAQAAAABAAAINAEcAAMA
+AAABAAEAAAFSAAMAAAABAAEAAAFTAAMAAAAEAAAI8odzAAcAAAfYAAAI+gAAAAAACAAIAAgACAABAAEA
+AQABAAAH2GFwcGwCIAAAbW50clJHQiBYWVogB9kAAgAZAAsAGgALYWNzcEFQUEwAAAAAYXBwbAAAAAAA
+AAAAAAAAAAAAAAAAAPbWAAEAAAAA0y1hcHBsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAALZGVzYwAAAQgAAABvZHNjbQAAAXgAAAWcY3BydAAABxQAAAA4d3RwdAAAB0wA
+AAAUclhZWgAAB2AAAAAUZ1hZWgAAB3QAAAAUYlhZWgAAB4gAAAAUclRSQwAAB5wAAAAOY2hhZAAAB6wA
+AAAsYlRSQwAAB5wAAAAOZ1RSQwAAB5wAAAAOZGVzYwAAAAAAAAAUR2VuZXJpYyBSR0IgUHJvZmlsZQAA
+AAAAAAAAAAAAFEdlbmVyaWMgUkdCIFByb2ZpbGUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAG1sdWMAAAAAAAAAHwAAAAxza1NLAAAAKAAAAYRkYURLAAAALgAAAaxj
+YUVTAAAAJAAAAdp2aVZOAAAAJAAAAf5wdEJSAAAAJgAAAiJ1a1VBAAAAKgAAAkhmckZVAAAAKAAAAnJo
+dUhVAAAAKAAAApp6aFRXAAAAFgAAAsJuYk5PAAAAJgAAAthjc0NaAAAAIgAAAv5oZUlMAAAAHgAAAyBp
+dElUAAAAKAAAAz5yb1JPAAAAJAAAA2ZkZURFAAAALAAAA4prb0tSAAAAFgAAA7ZzdlNFAAAAJgAAAth6
+aENOAAAAFgAAA8xqYUpQAAAAGgAAA+JlbEdSAAAAIgAAA/xwdFBPAAAAJgAABB5ubE5MAAAAKAAABERl
+c0VTAAAAJgAABB50aFRIAAAAJAAABGx0clRSAAAAIgAABJBmaUZJAAAAKAAABLJockhSAAAAKAAABNpw
+bFBMAAAALAAABQJydVJVAAAAIgAABS5hckVHAAAAJgAABVBlblVTAAAAJgAABXYAVgFhAGUAbwBiAGUA
+YwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBsAEcAZQBuAGUAcgBlAGwAIABSAEcAQgAtAGIAZQBzAGsA
+cgBpAHYAZQBsAHMAZQBQAGUAcgBmAGkAbAAgAFIARwBCACAAZwBlAG4A6AByAGkAYwBDHqUAdQAgAGgA
+7ABuAGgAIABSAEcAQgAgAEMAaAB1AG4AZwBQAGUAcgBmAGkAbAAgAFIARwBCACAARwBlAG4A6QByAGkA
+YwBvBBcEMAQzBDAEOwRMBD0EOAQ5ACAEPwRABD4ERAQwBDkEOwAgAFIARwBCAFAAcgBvAGYAaQBsACAA
+ZwDpAG4A6QByAGkAcQB1AGUAIABSAFYAQgDBAGwAdABhAGwA4QBuAG8AcwAgAFIARwBCACAAcAByAG8A
+ZgBpAGyQGnUoACAAUgBHAEIAIIJyX2ljz4/wAEcAZQBuAGUAcgBpAHMAawAgAFIARwBCAC0AcAByAG8A
+ZgBpAGwATwBiAGUAYwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBsBeQF6AXVBeQF2QXcACAAUgBHAEIA
+IAXbBdwF3AXZAFAAcgBvAGYAaQBsAG8AIABSAEcAQgAgAGcAZQBuAGUAcgBpAGMAbwBQAHIAbwBmAGkA
+bAAgAFIARwBCACAAZwBlAG4AZQByAGkAYwBBAGwAbABnAGUAbQBlAGkAbgBlAHMAIABSAEcAQgAtAFAA
+cgBvAGYAaQBsx3y8GAAgAFIARwBCACDVBLhc0wzHfGZukBoAIABSAEcAQgAgY8+P8GWHTvZOAIIsACAA
+UgBHAEIAIDDXMO0w1TChMKQw6wOTA7UDvQO5A7oDzAAgA8ADwQO/A8YDrwO7ACAAUgBHAEIAUABlAHIA
+ZgBpAGwAIABSAEcAQgAgAGcAZQBuAOkAcgBpAGMAbwBBAGwAZwBlAG0AZQBlAG4AIABSAEcAQgAtAHAA
+cgBvAGYAaQBlAGwOQg4bDiMORA4fDiUOTAAgAFIARwBCACAOFw4xDkgOJw5EDhsARwBlAG4AZQBsACAA
+UgBHAEIAIABQAHIAbwBmAGkAbABpAFkAbABlAGkAbgBlAG4AIABSAEcAQgAtAHAAcgBvAGYAaQBpAGwA
+aQBHAGUAbgBlAHIAaQENAGsAaQAgAFIARwBCACAAcAByAG8AZgBpAGwAVQBuAGkAdwBlAHIAcwBhAGwA
+bgB5ACAAcAByAG8AZgBpAGwAIABSAEcAQgQeBDEESQQ4BDkAIAQ/BEAEPgREBDgEOwRMACAAUgBHAEIG
+RQZEBkEAIAYqBjkGMQZKBkEAIABSAEcAQgAgBicGRAY5BicGRQBHAGUAbgBlAHIAaQBjACAAUgBHAEIA
+IABQAHIAbwBmAGkAbABldGV4dAAAAABDb3B5cmlnaHQgMjAwNyBBcHBsZSBJbmMuLCBhbGwgcmlnaHRz
+IHJlc2VydmVkLgBYWVogAAAAAAAA81IAAQAAAAEWz1hZWiAAAAAAAAB0TQAAPe4AAAPQWFlaIAAAAAAA
+AFp1AACscwAAFzRYWVogAAAAAAAAKBoAABWfAAC4NmN1cnYAAAAAAAAAAQHNAABzZjMyAAAAAAABDEIA
+AAXe///zJgAAB5IAAP2R///7ov///aMAAAPcAADAbNIlJicoWiRjbGFzc25hbWVYJGNsYXNzZXNfEBBO
+U0JpdG1hcEltYWdlUmVwoycpKlpOU0ltYWdlUmVwWE5TT2JqZWN00iUmLC1XTlNBcnJheaIsKtIlJi8w
+Xk5TTXV0YWJsZUFycmF5oy8sKtMyMwo0NTZXTlNXaGl0ZVxOU0NvbG9yU3BhY2VEMCAwABADgAzSJSY4
+OVdOU0NvbG9yojgq0iUmOzxXTlNJbWFnZaI7Kl8QD05TS2V5ZWRBcmNoaXZlctE/QFRyb290gAEACAAR
+ABoAIwAtADIANwBGAEwAVwBeAGUAcgB5AIEAgwCFAIoAjACOAJcAnACnAKkAqwCtALIAtQC3ALkAuwC9
+AMIA2QDbAN0RsxG4EcMRzBHfEeMR7hH3EfwSBBIHEgwSGxIfEiYSLhI7EkASQhJEEkkSURJUElkSYRJk
+EnYSeRJ+AAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAAEoA
+</mutableData>
+        </image>
     </resources>
 </document>
